# Computer-Language

C++ Concepts/C++ Basics/: ExceptionHandling.cpp  Structures.cpp  forloops.cpp  functions.cpp  tempCodeRunnerFile.cpp  variables.cpp
C++ Concepts/C++ Bsasics/: StringFunction.cpp  arithemetic.cpp
C++ Concepts/OOP/: Abstrations.cpp  ConstructorAndDestructor.cpp  encapsulation.cpp  inheritance.cpp  inheritance_polymorphism.cpp  polymorphism.cpp
C++ Practice/: arithemetic.cpp  arrays.cpp  doWhile.cpp  encapsulation.cpp  ifelse.cpp  ifstatement.cpp  inheritance.cpp  intro to oop.cpp  pointer.cpp  whileloops.cpp
C++ Practice/OOP/: virtualFuctionAndPureFunction.cpp
Qt Apps Learning/MyprogressBar/: mainwindow.cpp  mainwindow.ui
Qt Apps Learning/NN/: mainwindow.ui
Qt Apps Learning/New_App/: CMakeLists.txt
Qt Apps Learning/QCheckBox_Style/: CMakeLists.txt  CheckBoxIcons.qrc  mainwindow.ui
Qt Apps Learning/QComboBox_Style/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Qt Apps Learning/QPushButton_Styles/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Questions/: 3 conditions questions.docx  4 looping questions.docx  5 structured programming questions.docx  6 & 8 arrays and strings questions.docx  problemsSolving.cpp  tempCodeRunnerFile.cpp
Visual Studio Projects/Kilimo/: CMakeLists.txt
Visual Studio Projects/Kilimo/Kilimo/: CMakeLists.txt  Kilimo.cpp  Kilimo.h
Visual Studio Projects/Project1/: Project1.sln
Visual Studio Projects/Project1/Project1/: Project1.vcxproj  main.cpp
Visual Studio Projects/Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc143.idb
Visual Studio Projects/Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
oneAndOnly/: CMakeLists.txt
wtyeye/: CMakeLists.txt
